syntax = "proto3";
package pbgen;


message LuaRpcMsg{
	string Rpcname			= 1;
	bytes Payload 			= 2;
}